Frontend integration (#18)
* manage_service_and_engine_capcities_integration

* update

* integration of APIES

---------
